# digestpp

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build_and_test.yml
cmake/: digestpp.pc.in
test/: CMakeLists.txt  examples.cc  test.cc  test_vectors.cc
